--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -57,7 +57,7 @@
             </objects>
             <point key="canvasLocation" x="916" y="118.29085457271366"/>
         </scene>
-        <!--修改個人資料-->
+        <!--個人資料-->
         <scene sceneID="XFk-eA-CEG">
             <objects>
                 <viewController hidesBottomBarWhenPushed="YES" id="6Vt-eS-dAJ" customClass="ProfileSettingsViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
@@ -107,9 +107,9 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXt-6Y-rXV">
-                                <rect key="frame" x="20" y="278" width="100" height="30"/>
+                                <rect key="frame" x="20" y="270" width="100" height="30"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="所屬群組" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9i8-lp-015">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="群組名稱" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9i8-lp-015">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <color key="textColor" name="Y4"/>
@@ -131,8 +131,8 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Test00HomeName" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoq-qg-ipi" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="25" y="310" width="330" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="愛做家事的一家人" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoq-qg-ipi" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                <rect key="frame" x="25" y="302" width="330" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="vRO-Fp-M7h"/>
                                 </constraints>
@@ -140,8 +140,42 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TK0-Hm-ZDa">
+                                <rect key="frame" x="20" y="354" width="100" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="群組代號" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5vT-d9-BcQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <color key="textColor" name="Y4"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Y1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="7To-gg-0iT"/>
+                                    <constraint firstAttribute="height" constant="30" id="L3F-mR-YQb"/>
+                                    <constraint firstItem="5vT-d9-BcQ" firstAttribute="leading" secondItem="TK0-Hm-ZDa" secondAttribute="leading" id="aaR-IL-UhA"/>
+                                    <constraint firstAttribute="trailing" secondItem="5vT-d9-BcQ" secondAttribute="trailing" id="hYV-Oh-sJx"/>
+                                    <constraint firstAttribute="bottom" secondItem="5vT-d9-BcQ" secondAttribute="bottom" id="q8F-T4-RZx"/>
+                                    <constraint firstItem="5vT-d9-BcQ" firstAttribute="top" secondItem="TK0-Hm-ZDa" secondAttribute="top" id="vwq-B2-wWz"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="HomeMates" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rrt-Kc-BxC" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                <rect key="frame" x="25" y="386" width="92" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="zEe-mT-jjb"/>
+                                </constraints>
+                                <color key="textColor" name="Y4"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LaK-nd-kQw">
-                                <rect key="frame" x="20" y="370" width="100" height="30"/>
+                                <rect key="frame" x="20" y="438" width="100" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="目標積分" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="27r-Bf-TAR">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -172,9 +206,9 @@
                                 </state>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="輸入目標積分" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OYf-AD-099" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="25" y="402" width="330" height="40"/>
+                                <rect key="frame" x="25" y="470" width="330" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="Dli-Vl-lLi"/>
+                                    <constraint firstAttribute="height" constant="40" id="HRT-5F-Plm"/>
                                 </constraints>
                                 <color key="textColor" name="Y4"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -184,28 +218,34 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LaK-nd-kQw" firstAttribute="leading" secondItem="9i8-lp-015" secondAttribute="leading" id="5GQ-wW-JAE"/>
+                            <constraint firstItem="Rrt-Kc-BxC" firstAttribute="top" secondItem="TK0-Hm-ZDa" secondAttribute="bottom" constant="2" id="7Au-pE-ru2"/>
                             <constraint firstItem="qoq-qg-ipi" firstAttribute="top" secondItem="GXt-6Y-rXV" secondAttribute="bottom" constant="2" id="7xy-fM-viX"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="cor-AS-tax" secondAttribute="trailing" constant="20" id="8W0-rD-H0S"/>
                             <constraint firstItem="cor-AS-tax" firstAttribute="top" secondItem="qyg-Bl-KSX" secondAttribute="bottom" constant="4" id="D5B-zw-Od1"/>
                             <constraint firstItem="Z8I-PC-CSm" firstAttribute="centerX" secondItem="f96-Yt-DsY" secondAttribute="centerX" id="Eer-E2-YLm"/>
                             <constraint firstItem="9i8-lp-015" firstAttribute="leading" secondItem="00R-dw-r26" secondAttribute="leading" id="Fyx-FY-ALq"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="OYf-AD-099" secondAttribute="trailing" constant="20" id="INg-7l-bwJ"/>
-                            <constraint firstItem="LaK-nd-kQw" firstAttribute="top" secondItem="qoq-qg-ipi" secondAttribute="bottom" constant="20" id="R7D-e2-BW4"/>
+                            <constraint firstItem="TK0-Hm-ZDa" firstAttribute="top" secondItem="qoq-qg-ipi" secondAttribute="bottom" constant="12" id="Nmc-G2-rbX"/>
+                            <constraint firstItem="Rrt-Kc-BxC" firstAttribute="firstBaseline" secondItem="qoq-qg-ipi" secondAttribute="baseline" constant="20" symbolType="layoutAnchor" id="Qy6-0f-1qp"/>
+                            <constraint firstItem="LaK-nd-kQw" firstAttribute="top" secondItem="Rrt-Kc-BxC" secondAttribute="bottom" constant="12" id="UQb-Cc-UBl"/>
                             <constraint firstItem="cor-AS-tax" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="25" id="UfT-cI-YyX"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="120" id="Uta-2D-OQF"/>
                             <constraint firstItem="qoq-qg-ipi" firstAttribute="leading" secondItem="cor-AS-tax" secondAttribute="leading" id="WDo-OY-dq9"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="centerX" secondItem="f96-Yt-DsY" secondAttribute="centerX" id="YIN-ku-7Vw"/>
-                            <constraint firstItem="GXt-6Y-rXV" firstAttribute="top" secondItem="cor-AS-tax" secondAttribute="bottom" constant="20" id="YWG-8t-xhm"/>
-                            <constraint firstItem="OYf-AD-099" firstAttribute="leading" secondItem="qoq-qg-ipi" secondAttribute="leading" id="ZP3-Ey-cXL"/>
-                            <constraint firstItem="OYf-AD-099" firstAttribute="top" secondItem="LaK-nd-kQw" secondAttribute="bottom" constant="2" id="Zet-Nx-I0L"/>
+                            <constraint firstItem="GXt-6Y-rXV" firstAttribute="top" secondItem="cor-AS-tax" secondAttribute="bottom" constant="12" id="YWG-8t-xhm"/>
+                            <constraint firstItem="27r-Bf-TAR" firstAttribute="leading" secondItem="5vT-d9-BcQ" secondAttribute="leading" id="azO-nC-4WR"/>
                             <constraint firstItem="Z8I-PC-CSm" firstAttribute="top" secondItem="fHl-Y3-25R" secondAttribute="bottom" constant="8" id="hGj-7p-zlG"/>
+                            <constraint firstItem="OYf-AD-099" firstAttribute="leading" secondItem="Rrt-Kc-BxC" secondAttribute="leading" id="lbV-3I-zDM"/>
+                            <constraint firstItem="OYf-AD-099" firstAttribute="top" secondItem="LaK-nd-kQw" secondAttribute="bottom" constant="2" id="mu6-ZF-EhM"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="qoq-qg-ipi" secondAttribute="trailing" constant="20" id="uix-t5-TP2"/>
+                            <constraint firstItem="TK0-Hm-ZDa" firstAttribute="leading" secondItem="9i8-lp-015" secondAttribute="leading" id="v3L-l1-mEY"/>
+                            <constraint firstItem="Rrt-Kc-BxC" firstAttribute="leading" secondItem="qoq-qg-ipi" secondAttribute="leading" id="vIT-GV-RLq"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="20" id="wwZ-Il-fuT"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="10" id="znQ-yQ-gnn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="3YC-Nz-e5s"/>
                     </view>
-                    <navigationItem key="navigationItem" title="修改個人資料" id="gga-Mp-voD">
+                    <navigationItem key="navigationItem" title="個人資料" id="gga-Mp-voD">
                         <barButtonItem key="rightBarButtonItem" title="完成" id="6by-eC-ABZ">
                             <color key="tintColor" red="0.2901960784" green="0.22352941179999999" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <connections>
@@ -215,6 +255,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="monthGoalTextField" destination="OYf-AD-099" id="qs3-zg-r0b"/>
+                        <outlet property="ownGroupIDTextField" destination="Rrt-Kc-BxC" id="2fc-Sa-6ZS"/>
                         <outlet property="ownGroupTextField" destination="qoq-qg-ipi" id="a86-Gf-tAb"/>
                         <outlet property="userNameTextField" destination="cor-AS-tax" id="vsP-t1-pCW"/>
                         <outlet property="userPictrueImage" destination="fHl-Y3-25R" id="NTY-Lw-uVg"/>
