--- a/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
+++ b/HomeMates/VIew/Profile/ProfileHeaderViewCell.xib
@@ -52,13 +52,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTg-Hc-UnR">
-                                        <rect key="frame" x="253" y="80.5" width="60" height="36"/>
+                                        <rect key="frame" x="255" y="80.5" width="60" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <color key="textColor" name="Y4"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="累積積分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZh-ng-U1s">
-                                        <rect key="frame" x="25" y="54.5" width="62" height="18"/>
+                                        <rect key="frame" x="25" y="54.5" width="61.5" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" name="Y4"/>
                                         <nil key="highlightedColor"/>
@@ -97,7 +97,7 @@
                                     <constraint firstItem="GZh-ng-U1s" firstAttribute="leading" secondItem="m8m-vg-zhh" secondAttribute="leading" constant="25" id="Qpa-xI-wDU"/>
                                     <constraint firstAttribute="height" constant="120" id="TLV-BD-Qj8"/>
                                     <constraint firstAttribute="trailing" secondItem="vxe-Vf-N9g" secondAttribute="trailing" constant="6" id="TXi-JK-wdc"/>
-                                    <constraint firstItem="KTg-Hc-UnR" firstAttribute="centerX" secondItem="d78-R2-aE3" secondAttribute="centerX" id="aX2-G7-YqP"/>
+                                    <constraint firstItem="KTg-Hc-UnR" firstAttribute="centerX" secondItem="d78-R2-aE3" secondAttribute="centerX" constant="2" id="aX2-G7-YqP"/>
                                     <constraint firstItem="KTg-Hc-UnR" firstAttribute="top" secondItem="d78-R2-aE3" secondAttribute="bottom" constant="8" id="aiY-Pe-jLr"/>
                                     <constraint firstItem="UNO-2n-Foa" firstAttribute="centerX" secondItem="m8m-vg-zhh" secondAttribute="centerX" id="lM9-Oj-Y7u"/>
                                     <constraint firstAttribute="trailing" secondItem="d78-R2-aE3" secondAttribute="trailing" constant="20" id="nl3-Xa-cA1"/>
