--- a/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
+++ b/HomeMates/VIew/Profile/TotalPointsTableViewCell.xib
@@ -21,7 +21,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="任務名稱底家" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfm-CC-7Tz">
-                        <rect key="frame" x="64" y="16" width="98" height="18"/>
+                        <rect key="frame" x="78" y="16" width="98" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="CP7-Nn-onS"/>
                         </constraints>
@@ -30,7 +30,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="積分放在這" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lev-3D-Ys5">
-                        <rect key="frame" x="64" y="42" width="144" height="14"/>
+                        <rect key="frame" x="78" y="42" width="140" height="14"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.29019607843137257" green="0.22352941176470589" blue="0.18431372549019609" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -42,17 +42,17 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DoneTask_36px" translatesAutoresizingMaskIntoConstraints="NO" id="Sct-Cz-GZ3">
-                        <rect key="frame" x="16" y="0.0" width="36" height="116.5"/>
+                        <rect key="frame" x="30" y="0.0" width="36" height="116.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="36" id="Qki-aS-3fM"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="累計積分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lo-v3-gHg">
-                        <rect key="frame" x="236" y="38" width="62" height="18"/>
+                        <rect key="frame" x="246" y="34" width="62" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="eb9-5w-eGA"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -63,12 +63,12 @@
                     <constraint firstItem="dfm-CC-7Tz" firstAttribute="leading" secondItem="Sct-Cz-GZ3" secondAttribute="trailing" constant="12" id="Qlk-CS-5PK"/>
                     <constraint firstItem="6lo-v3-gHg" firstAttribute="leading" secondItem="lev-3D-Ys5" secondAttribute="trailing" constant="28" id="Rmk-7N-jff"/>
                     <constraint firstItem="QQe-pj-RJS" firstAttribute="bottom" secondItem="lev-3D-Ys5" secondAttribute="bottom" id="SDd-NX-g8k"/>
-                    <constraint firstItem="Sct-Cz-GZ3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="VCQ-3s-fVB"/>
+                    <constraint firstItem="Sct-Cz-GZ3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" id="VCQ-3s-fVB"/>
                     <constraint firstItem="lev-3D-Ys5" firstAttribute="leading" secondItem="Sct-Cz-GZ3" secondAttribute="trailing" constant="12" id="VEa-58-QON"/>
                     <constraint firstItem="dfm-CC-7Tz" firstAttribute="leading" secondItem="Sct-Cz-GZ3" secondAttribute="trailing" constant="12" id="abU-13-clj"/>
                     <constraint firstItem="dfm-CC-7Tz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="c8w-Q6-aMl"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="6lo-v3-gHg" secondAttribute="trailing" constant="78" id="d1w-PE-xk0"/>
-                    <constraint firstItem="6lo-v3-gHg" firstAttribute="bottom" secondItem="QQe-pj-RJS" secondAttribute="bottom" id="g80-5R-5FE"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="6lo-v3-gHg" secondAttribute="trailing" constant="68" id="d1w-PE-xk0"/>
+                    <constraint firstItem="6lo-v3-gHg" firstAttribute="bottom" secondItem="QQe-pj-RJS" secondAttribute="bottom" constant="-4" id="g80-5R-5FE"/>
                     <constraint firstAttribute="bottomMargin" secondItem="lev-3D-Ys5" secondAttribute="bottom" constant="16" id="mk6-EG-7W9"/>
                     <constraint firstAttribute="bottom" secondItem="Sct-Cz-GZ3" secondAttribute="bottom" id="nzJ-cB-Bll"/>
                     <constraint firstItem="lev-3D-Ys5" firstAttribute="top" secondItem="dfm-CC-7Tz" secondAttribute="bottom" constant="8" id="ri5-id-56t"/>
