--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -212,7 +212,7 @@
                                 </constraints>
                                 <color key="textColor" name="Y4"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
